[package]
name = "dhcp_parser"
version = "0.1.0"
authors = ["Paul Woolcock <paul@woolcock.us>"]
repository = "https://github.com/pwoolcoc/dhcp_parser"
description = """
DHCP parser using nom
"""
license = "MIT"

[dependencies]
nom = "3.2.0"
enum_primitive = "0.1.1"

[dependencies.num]
num = "0.1.40"
default-features = false
